<resources>
    <string name="app_name">Color_Pallette</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="generate">GENERATE</string>
    <string name="save">SAVE</string>
    <string name="action_clear">Clear All</string>
    <string name="new_color_created">New color created: %s</string>
    <string name="edit_color">Edit Color</string>
    <string name="undo">Undo</string>
</resources>
